--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,2 +1,58 @@
 <%- include('header');-%>
+<div class="contact-block">
+  <h1>Bizimle elaqe</h1>
+  <p>Tel: 050-350-06-72</p>
+  <p>Email: info.shongar@gmail.com</p>
+  <a href="mailto:info.shongar@gmail.com">Bize yazin</a>
+</div>
+<div class="arrow">
+  <h3>ve ya ...</h3>
+  <p>&darr;</p>
+</div>
+<div class="we-contact-block">
+  <h1>Biz size yazaq</h1>
+<form action="/contact" method="post">
+  <div class="form-group">
+    <div class="form-row">
+    <div class="col">
+      <label for="fName">Ad:</label>
+      <input id="fName" type="text" class="form-control" name="fName" placeholder="Eli">
+    </div>
+    <div class="col">
+      <label for="lName">Soyad:</label>
+      <input id="lName" type="text" class="form-control" name="lName" placeholder="Eliyev">
+    </div>
+  </div>
+  <div class="form-row">
+  <div class="col">
+    <label for="email">Email:</label>
+    <input id="email" type="email" class="form-control" name="email" placeholder="misal.numune@gmail.com">
+  </div>
+  <div class="col">
+    <label for="number">Mobil:</label>
+    <input id="number" type="text" class="form-control" name="phone" placeholder="050-123-45-67">
+  </div>
+</div>
+<div class="form-row">
+  <label for="text">Oyrenmek istediyiniz movzu</label>
+    <textarea class="form-control" id="text" name="text" rows="3"></textarea>
+</div>
+
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="radio" id="email-radio" value="email-yaz" checked>
+  <label class="form-check-label" for="email-radio">
+    Size email yazaq
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="radio" id="phone-radio" value="zeng-et">
+  <label class="form-check-label" for="phone-radio">
+    Size zeng edek
+  </label>
+</div>
+  </div>
+  <button class="btn btn-lg btn-primary" type="submit" name="button">Gonder</button>
+</form>
+</div>
+
 <%- include('footer'); -%>
