--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,10 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -25,7 +21,7 @@
           <a class="nav-link" href="/">Esas sehife</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Portofolio</a>
+          <a class="nav-link" href="/portofolio">Portofolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">Haqqimizda</a>
