--- a/views/card.ejs
+++ b/views/card.ejs
@@ -1,10 +1,9 @@
 <div class="col-lg-4 col-md-6">
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="images/card-images/renovation.jpg" alt="Card image cap">
+  <img class="card-img-top" src="images/card-images/<%=source%>" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><%=title %></h5>
-    <p class="card-text"><%=content%></p>
-    <a id="<%=id%>" href="#" class="btn btn-primary">Etrafli</a>
+    <a id="<%=id%>" href="/services/<%=id%>"  name="<%=id%>" class="btn btn-primary">Etrafli</a>
   </div>
 </div>
 </div>
