--- a/views/card.ejs
+++ b/views/card.ejs
@@ -1,5 +1,5 @@
 <div class="col-lg-4 col-md-6">
-<div class="card" style="width: 18rem;">
+<div class="card main-card" style="width: 18rem;">
   <img class="card-img-top" src="images/card-images/<%=source%>" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><%=title %></h5>
