--- a/public/styles.css
+++ b/public/styles.css
@@ -32,6 +32,25 @@ body {
   width: 6rem;
 }
 
+/* .transition {
+  background-color: #33ccff;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 7;
+  display: flex;
+  align-items: center;
+  animation: transition-2 2s ease forwards 1s;
+  box-shadow: 5rem 3rem 50px #b3ecff;
+} */
+.transition img {
+  width: 100%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
 .footer {
   text-align: center;
   background-color: #33ccff;
@@ -45,6 +64,29 @@ body {
   width: 100%;
   background-color: #e6f9ff;
   animation: disappear 1s ease forwards 4s;
+}
+
+.individual {
+  position: relative;
+}
+
+.individual img {
+  width: 100%;
+}
+
+.individual-content {
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 2rem;
+  line-height: 2;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 3% 1%;
+}
+
+.list-content ul {
+  text-align: left;
+  line-height: 2;
 }
 
 #logo {
@@ -159,14 +201,12 @@ body {
   height: 100vh;
 }
 
-.about-header {
+.about-header, .description {
   text-align: center;
   color: white;
 }
 
 .description {
-  color: white;
-  text-align: center;
   line-height: 1.5;
   font-size: 1.5rem;
   margin: 1% 2%;
@@ -202,10 +242,6 @@ body {
   margin: 5% 0;
 }
 
-.company-title {
-  text-align: center;
-}
-
 .company-image {
   width: 100%;
   max-width: 12.5rem;
@@ -220,7 +256,7 @@ body {
   box-shadow: 1px 1px 3px #33ccff;
 }
 
-.contact-block, .arrow, .we-contact-block h1 {
+.contact-block, .arrow, .company-title, .we-contact-block h1, .individual-content h1 {
   text-align: center;
 }
 
@@ -267,10 +303,6 @@ body {
   animation: text-appear 1s ease forwards;
 }
 
-.portofolio-text:hover {
-  animation: to-click 1s ease forwards;
-}
-
 .portofolio-headers {
   text-align: center;
   margin-top: 3%;
@@ -278,6 +310,24 @@ body {
 
 .job-block {
   margin: 5% 12%;
+}
+
+@keyframes transition-1 {
+  to {
+    left: 0;
+  }
+}
+
+@keyframes transition-2 {
+  to {
+    left: -120%;
+  }
+}
+
+@keyframes opacity {
+  to {
+    opacity: 0.3
+  }
 }
 
 @keyframes img-zoom {
@@ -289,12 +339,6 @@ body {
 @keyframes text-appear {
   to {
     opacity: 1;
-  }
-}
-
-@keyframes to-click {
-  to {
-    background-color: #33ccff;
   }
 }
 
@@ -314,7 +358,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 769px) {
   .sidebar {
     position: sticky;
     top: 15%;
@@ -339,5 +383,20 @@ body {
 
   .portofolio-headers h6 {
     visibility: hidden;
+  }
+
+  .individual-content {
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 1px 1px 5px black;
+    width: 80%;
+  }
+
+  .individual-content p, .individual-content li {
+    font-size: 1.2rem;
+    font-weight: bolder;
+    color: black;
   }
 }
