--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,17 @@
 <%- include('header'); -%>
 <div class="about">
-<h1 class="about-header">Haqqimizda</h1>
-<p class="description">SHONGAR LLC illerdir sektorda oz sozunu demis ve musterilerin inamini qazanmis bir sirketdir.</p>
-<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<h2 class="workers-header">Rəhbərlik</h2>
-<%- include('about-block'); -%>
-<%- include('about-block'); -%>
-<%- include('about-block'); -%>
-<h2 class="companies-header">Emekdaslarimiz</h2>
+<h1 class="about-header">Haqqımızda</h1>
+<p class="description">Bilməli olduğunuz hər şey</p>
+<p class="about-content">Şirkətin işi layihənin həyata keçirilməsinin bütün mərhələlərində Sifarişçi ilə fərdi yanaşma və qarşılıqlı anlaşmaya əsaslanır.</p>
+<h2 class="workers-header">Niyə biz?</h2>
+<ul class="about-list">
+  <li>Bazarla olan yaxın əlaqələrimizə görə ən optimal təklifləri verilir.</li>
+  <li>Təklif olunan işlərin hər biri ilə o sahədə mütəxəssisləşmiş şəxslər məşğul olur,maksimum keyfiyyət təmin edilir.</li>
+  <li>İş bitdikdən sonra ortaya çıxmış kiçik narazılıqlar şirkətimiz tərəfindən aradan qaldırılır.</li>
+  <li>Qiymətləndirmə iş başlamamışdan əvvəl aparılır,iş zamanı xoşagəlməz əlavə xərclər yaranmır.</li>
+  <li>Görülən hər bir işə zəmanət verilir.</li>
+</ul>
+<h2 class="companies-header">Əməkdaşlarımız</h2>
 <%- include('companies');-%>
-</div>
-<div style="background-color:red;" class="test">
-  heeyo
 </div>
 <%- include('footer'); -%>
