--- a/views/card.ejs
+++ b/views/card.ejs
@@ -1,9 +1,9 @@
 <div class="col-lg-4 col-md-6">
 <div class="card main-card" style="width: 18rem;">
-  <img class="card-img-top" src="images/card-images/<%=source%>" alt="Card image cap">
+  <a id="<%=id%>" href="/services/<%=id%>"  name="<%=id%>" ><img class="card-img-top" src="images/card-images/<%=source%>" alt="Card image cap"></a>
   <div class="card-body">
     <h5 class="card-title"><%=title %></h5>
-    <a id="<%=id%>" href="/services/<%=id%>"  name="<%=id%>" class="btn btn-primary">Etrafli</a>
+    <a id="<%=id%>" href="/services/<%=id%>"  name="<%=id%>" class="btn btn-primary">Ətraflı</a>
   </div>
 </div>
 </div>
