--- a/views/companies.ejs
+++ b/views/companies.ejs
@@ -1,10 +1,24 @@
 <div class="container-fluid">
   <div class="row">
-    <%- include('company-card',{image:"dalgidj.png"}); -%>
-    <%- include('company-card',{image:"socar.jpg"}); -%>
-    <%- include('company-card',{image:"dalgidj.png"}); -%>
-    <%- include('company-card',{image:"socar.jpg"}); -%>
-    <%- include('company-card',{image:"dalgidj.png"}); -%>
-    <%- include('company-card',{image:"socar.jpg"}); -%>
+    <div class="col-xl-3 col-md-4 col-sm-6 company-margin">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top company-image" src="images/logo-images/a&s.png" alt="Card image cap">
+    </div>
+    </div>
+    <div class="col-xl-3 col-md-4 col-sm-6 company-margin">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top company-image" src="images/logo-images/dalgidj.png" alt="Card image cap">
+    </div>
+    </div>
+    <div class="col-xl-3 col-md-4 col-sm-6 company-margin">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top company-image" src="images/logo-images/oceaneering.jpg" alt="Card image cap">
+    </div>
+    </div>
+    <div class="col-xl-3 col-md-4 col-sm-6 company-margin">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top company-image" src="images/logo-images/AAM.png" alt="Card image cap">
+    </div>
+    </div>
   </div>
 </div>
