--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,16 +1,16 @@
 <%- include('header');-%>
 <div class="contact-block">
-  <h1>Bizimle elaqe</h1>
+  <h1>Bizimlə əlaqə</h1>
   <p>Tel: 050-350-06-72</p>
   <p>Email: info.shongar@gmail.com</p>
-  <a href="mailto:info.shongar@gmail.com">Bize yazin</a>
+  <a href="mailto:info.shongar@gmail.com">Bizə yazın</a>
 </div>
 <div class="arrow">
-  <h3>ve ya ...</h3>
+  <h3>və ya ...</h3>
   <p>&darr;</p>
 </div>
 <div class="we-contact-block">
-  <h1>Biz size yazaq</h1>
+  <h1>Biz sizə yazaq</h1>
 <form action="/contact" method="post">
   <div class="form-group">
     <div class="form-row">
@@ -34,20 +34,20 @@
   </div>
 </div>
 <div class="form-row">
-  <label for="text">Oyrenmek istediyiniz movzu</label>
+  <label for="text">Məlumat almaq istədiyiniz mövzu:</label>
     <textarea class="form-control" id="text" name="text" rows="3"></textarea>
 </div>
 
 <div class="form-check">
   <input class="form-check-input" type="radio" name="radio" id="email-radio" value="email-yaz" checked>
   <label class="form-check-label" for="email-radio">
-    Size email yazaq
+    Sizə email yazaq
   </label>
 </div>
 <div class="form-check">
   <input class="form-check-input" type="radio" name="radio" id="phone-radio" value="zeng-et">
   <label class="form-check-label" for="phone-radio">
-    Size zeng edek
+    Sizə zəng edək
   </label>
 </div>
   </div>
