--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-lg-3 aside">
       <div class="sidebar">
-        <h1>Xidmətlərimiz</h1>
+        <h1 id="sidebar">Xidmətlərimiz</h1>
         <ul>
           <li><a href="#temir">Təmir</a></li>
           <li><a href="#tikinti">Tikinti</a></li>
           <li><a href="#work">Xidmətlər</a></li>
           <li><a href="#sell">Alqı-satqı</a></li>
-          <li><a href="#services">Digər Servislər</a></li>
+          <li><a href="#services">Digər Xidmətlər</a></li>
         </ul>
       </div>
     </div>
