--- a/views/carousel.ejs
+++ b/views/carousel.ejs
@@ -1,13 +1,13 @@
 <div id="carouselExampleFade" class=" margin carousel slide carousel-fade" data-ride="carousel">
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img src="images/tikinti.png" class="d-block w-100" alt="..."/>
+    <img src="images/tikinti.png" class="d-block w-100" alt="carousel-card"/>
   </div>
   <div class="carousel-item">
-    <img src="images/tender.png" class="d-block w-100" alt="..."/>
+    <img src="images/elektronika.png" class="d-block w-100" alt="carousel-card"/>
   </div>
   <div class="carousel-item">
-    <img src="images/vehicles.png" class="d-block w-100" alt="..."/>
+    <img src="images/tender.png" class="d-block w-100" alt="carousel-card"/>
   </div>
 </div>
 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
