--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Shongar</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
-
-    <title>Shongar</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark navbar-expand-lg">
-      <a class="navbar-brand"><img class="logo-img" src="/images/logo.png" /></a>
+    <nav class="navbar navbar-dark  navbar-expand-lg">
+      <a href="/" class="navbar-brand"><img class="logo-img" src="/images/logo.png" /></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/">Esas sehife</a>
+          <a class="nav-link nav-custom" href="/">Əsas səhifə</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portofolio">Portofolio</a>
+          <a class="nav-link nav-custom" href="/portofolio">Portofolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">Haqqimizda</a>
+          <a class="nav-link nav-custom" href="/about">Haqqımızda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/contact" >Elaqe</a>
+          <a class="nav-link nav-custom " href="/contact" >Bizimlə əlaqə</a>
         </li>
       </ul>
     </div>
