--- a/views/portofolio-block.ejs
+++ b/views/portofolio-block.ejs
@@ -3,7 +3,7 @@
 
   <div class="portofolio-text">
     <h4><%= header%></h4>
-    <a href="/portofolio/<%= header%>"id="<%=id%>"><p>Click to learn more</p></a>
+    <a href="/portofolio/<%= header%>"id="<%=id%>"><p>Ətraflı oxumaq üçün klikləyin</p></a>
   </div>
 
 </div>
