change contact information

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <%- include('header');-%>
 <div class="contact-block">
   <h1>Bizimlə əlaqə</h1>
-  <p>Tel: 050-350-06-72</p>
+  <p>Tel: (050 / 070) 250-85-48</p>
   <p>Email: info.shongar@gmail.com</p>
   <a href="mailto:info.shongar@gmail.com">Bizə yazın</a>
 </div>
