--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="Təmir,tikinti,elektrik işləri,təmizlik,transfer xidmətləri,web-səhivə hazırlanması və digər xidmətlər.">
     <meta name="author" content="Gulhuseyn Sadiqli , gulhuseynsadiqli@gmail.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8ec04f8ecb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
@@ -29,6 +30,16 @@
         <li class="nav-item">
           <a class="nav-link nav-custom " href="/contact" >Bizimlə əlaqə</a>
         </li>
+        <li class="nav-item dropleft">
+        <a class="nav-link nav-custom dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-language"></i>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <button id="en-button" type="button" class="dropdown-item" >English</button>
+          <button id="rus-button" type="button" class="dropdown-item" >Русский</a>
+          <button id="aze-button" type="button" class="dropdown-item active" >Azərbaycanca</button>
+        </div>
+      </li>
       </ul>
     </div>
     </nav>
