add google translate

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -51,7 +51,7 @@
   </label>
 </div>
   </div>
-  <button class="btn btn-lg btn-primary" type="submit" name="button">Gonder</button>
+  <button class="btn btn-lg btn-primary" type="submit" name="button">Gönder</button>
 </form>
 </div>
 
