--- a/views/header.ejs
+++ b/views/header.ejs
@@ -35,9 +35,9 @@
           <i class="fas fa-language"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <button id="en-button" type="button" class="dropdown-item" >English</button>
-          <button id="rus-button" type="button" class="dropdown-item" >Русский</a>
-          <button id="aze-button" type="button" class="dropdown-item active" >Azərbaycanca</button>
+          <button id="en-button" type="button" class="dropdown-item" ><a href="https://translate.google.com/translate?sl=az&tl=en&u=www.shongar.com">English</a> </button>
+          <button id="rus-button" type="button" class="dropdown-item" ><a href="https://translate.google.com/translate?sl=az&tl=ru&u=www.shongar.com">Русский</a> </button>
+          <button id="aze-button" type="button" class="dropdown-item" ><a href="http://www.shongar.com/">Azərbaycanca</a> </button>
         </div>
       </li>
       </ul>
